--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "mongoose": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
